--- a/HCCardViewTest/Base.lproj/Main.storyboard
+++ b/HCCardViewTest/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-icon" translatesAutoresizingMaskIntoConstraints="NO" id="Gh7-L9-4C0">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-icon" translatesAutoresizingMaskIntoConstraints="NO" id="Gh7-L9-4C0">
                                 <rect key="frame" x="15" y="51.5" width="25" height="25"/>
                                 <color key="tintColor" name="AccentColor"/>
                                 <constraints>
@@ -50,7 +50,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LP8-KO-Pn1">
                                 <rect key="frame" x="0.0" y="334.5" width="414" height="561.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottomView" translatesAutoresizingMaskIntoConstraints="NO" id="NVx-Ug-fip">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottomView" translatesAutoresizingMaskIntoConstraints="NO" id="NVx-Ug-fip">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="561.5"/>
                                     </imageView>
                                 </subviews>
@@ -107,8 +107,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="avatarIcon" destination="Gh7-L9-4C0" id="04p-5Z-ShU"/>
                         <outlet property="collectionView" destination="oYE-gN-VZ9" id="NyL-36-3QX"/>
                         <outlet property="collectionViewLayout" destination="xVk-RG-gDb" id="dcm-bn-uUJ"/>
+                        <outlet property="fakeView" destination="NVx-Ug-fip" id="qyt-K3-oLw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -120,7 +122,7 @@
         <image name="avatar-icon" width="50" height="50"/>
         <image name="bottomView" width="815" height="1068"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.96100002527236938" blue="0.79500001668930054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.057439334690000003" green="0.76100754739999998" blue="0.57701176399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
